--- a/subway-surfers-venice/index.html
+++ b/subway-surfers-venice/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <script src="poki-sdk.js"></script>
 
     <meta http-equiv="content-type" content="text/html; charset=UTF8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
