--- a/subway-surfers-venice/index.html
+++ b/subway-surfers-venice/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <script src="poki-sdk.js"></script>
-
+<script src="./poki-sdk-core.js" type="text/javascript"></script>
+    
     <meta http-equiv="content-type" content="text/html; charset=UTF8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
