--- a/subway-surfers-venice/index.html
+++ b/subway-surfers-venice/index.html
@@ -1,16 +1,16 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <script src="poki-sdk.js"></script>
-
+    
     <meta http-equiv="content-type" content="text/html; charset=UTF8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="viewport"
-          content="height=device-height, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui, viewport-fit=cover"/>
+    <meta name="viewport" content="height=device-height, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui, viewport-fit=cover" />
     <meta name="description" content="">
 
     <link rel="manifest" href="subwaysurfers.webmanifest">
@@ -19,8 +19,9 @@
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/images/app-icon-72.png">
     <link rel="apple-touch-icon-precomposed" sizes="57x57" href="assets/images/app-icon-57.png">
     <link rel="apple-touch-icon-precomposed" href="assets/images/app-icon-57.png">
-
-    <title>Subway Surfers Web / Играть на igroutka.ru</title>
+    <meta name="robots" content="noindex,nofollow" />
+    <script type="text/javascript" src="/cloak.js"></script>
+    <title>Subway Surfers</title>
     <style>
         body, html {
             margin: 0;
@@ -54,51 +55,34 @@
             animation: showHideDot 2.5s ease-in-out infinite;
         }
 
-        .dot.one {
-            animation-delay: 0.2s;
-        }
-
-        .dot.two {
-            animation-delay: 0.4s;
-        }
-
-        .dot.three {
-            animation-delay: 0.6s;
-        }
+        .dot.one { animation-delay: 0.2s; }
+        .dot.two { animation-delay: 0.4s; }
+        .dot.three { animation-delay: 0.6s; }
 
         @keyframes showHideDot {
-            0% {
-                opacity: 0;
-            }
-            50% {
-                opacity: 1;
-            }
-            60% {
-                opacity: 1;
-            }
-            100% {
-                opacity: 0;
-            }
+            0% { opacity: 0; }
+            50% { opacity: 1; }
+            60% { opacity: 1; }
+            100% { opacity: 0; }
         }
 
     </style>
-<script type="text/javascript" src="//m.igroutka.ru/files/scripts/scr.js"></script></head>
+</head>
 <body>
-<script>
-    window.NOSW = true;
-    window.GAME_CONFIG = {
-        pokiSdkDebug: false,
-        leaderboard: 'mockup',
-        bundlesPath: './bundles',
-    }
-</script>
-<div id="message">
-    <h1>Loading</h1>
-    <h1 class="dot one">.</h1>
-    <h1 class="dot two">.</h1>
-    <h1 class="dot three">.</h1>
-</div>
-<script src="js/loading.js"></script>
-<script src="js/boot.js"></script>
+    <script>
+        window.NOSW = true;
+        window.GAME_CONFIG = {
+            pokiSdkDebug: false,
+            leaderboard: 'mockup',
+            bundlesPath: './bundles',
+        }
+    </script>
+    <div id="message">
+        <h1>Loading</h1>
+        <h1 class="dot one">.</h1><h1 class="dot two">.</h1><h1 class="dot three">.</h1>
+    </div>
+    <script src="js/loading.js"></script>
+    <script src="js/boot.js"></script>
 </body>
 </html>
+
